Extending and refactoring scripts (issue #40).