@@ -4,19 +4,17 @@ set -e
 
 # ------------------------------------------------------------------------------
 #
-# run_db_seeder.sh: Creation of dummy data in an empty database schema / user.
+# run_db_seeder.sh: Creation of dummy data.
 #
 # ------------------------------------------------------------------------------
 
 export DB_SEEDER_DBMS_DEFAULT=sqlite
-export DB_SEEDER_DBMS_EMBEDDED=no
-
-unset -f DB_SEEDER_FILE_STATISTICS_DELIMITER=
-unset -f DB_SEEDER_FILE_STATISTICS_HEADER=
-unset -f DB_SEEDER_FILE_STATISTICS_NAME=
+export DB_SEEDER_SETUP_DBMS_DEFAULT=yes
+export DB_SEEDER_NO_CREATE_RUNS_DEFAULT=2
 
 if [ -z "$1" ]; then
     echo "==========================================="
+    echo "complete    - All implemented DBMSs"
     echo "derby       - Apache Derby [client]"
     echo "derby_emb   - Apache Derby [embedded]"
     echo "cratedb     - CrateDB"
@@ -46,47 +44,82 @@ else
     export DB_SEEDER_DBMS=$1
 fi
 
-unset -f DB_SEEDER_ENCODING_ISO_8859_1=
-unset -f DB_SEEDER_ENCODING_UTF_8=
+if [ -z "$2" ]; then
+    read -p "Setup the DBMS (yes/no) [default: $DB_SEEDER_SETUP_DBMS_DEFAULT] " DB_SEEDER_SETUP_DBMS
+    export DB_SEEDER_SETUP_DBMS=$DB_SEEDER_SETUP_DBMS
 
-export DB_SEEDER_FILE_CONFIGURATION_NAME=src/main/resources/db_seeder.properties
+    if [ -z "$DB_SEEDER_SETUP_DBMS" ]; then
+        export DB_SEEDER_SETUP_DBMS=$DB_SEEDER_SETUP_DBMS_DEFAULT
+    fi
+else
+    export DB_SEEDER_SETUP_DBMS=$2
+fi
+
+if [ -z "$3" ]; then
+    read -p "Number of data creation runs (0-2) [default: $DB_SEEDER_NO_CREATE_RUNS_DEFAULT] " DB_SEEDER_NO_CREATE_RUNS
+    export DB_SEEDER_NO_CREATE_RUNS=$DB_SEEDER_NO_CREATE_RUNS
+
+    if [ -z "$DB_SEEDER_NO_CREATE_RUNS" ]; then
+        export DB_SEEDER_NO_CREATE_RUNS=$DB_SEEDER_NO_CREATE_RUNS_DEFAULT
+    fi
+else
+    export DB_SEEDER_NO_CREATE_RUNS=$3
+fi
 
 export DB_SEEDER_JAVA_CLASSPATH=".:lib/*:JAVA_HOME/lib"
 
-unset -f DB_SEEDER_JDBC_CONNECTION_HOST=
+# ------------------------------------------------------------------------------
+# Start Properties.
+# ------------------------------------------------------------------------------
 
-unset -f DB_SEEDER_MAX_ROW_CITY=
-unset -f DB_SEEDER_MAX_ROW_COMPANY=
-unset -f DB_SEEDER_MAX_ROW_COUNTRY=
-unset -f DB_SEEDER_MAX_ROW_COUNTRY_STATE=
-unset -f DB_SEEDER_MAX_ROW_TIMEZONE=
-
-if [ "$DB_SEEDER_DBMS" = "cratedb" ]; then
+if [ "$DB_SEEDER_DBMS" = "cratedb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_CRATEDB_CONNECTION_HOST=
     unset -f DB_SEEDER_CRATEDB_CONNECTION_PORT=
     unset -f DB_SEEDER_CRATEDB_CONNETION_PREFIX=
     unset -f DB_SEEDER_CRATEDB_PASSWORD=
     unset -f DB_SEEDER_CRATEDB_USER=
     unset -f DB_SEEDER_CRATEDB_USER_SYS=
+    export DB_SEEDER_CRATEDB_VERSION=4.1.6
+    export DB_SEEDER_CRATEDB_VERSION=4.1.8
 fi
-if [ "$DB_SEEDER_DBMS" = "cubrid" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "cubrid" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     export DB_SEEDER_ENCODING_UTF_8=false
+    unset -f DB_SEEDER_CUBRID_CONNECTION_HOST=
     unset -f DB_SEEDER_CUBRID_CONNECTION_PORT=
     unset -f DB_SEEDER_CUBRID_CONNETION_PREFIX=
+    unset -f DB_SEEDER_CUBRID_CONNETION_SUFFIX=
     unset -f DB_SEEDER_CUBRID_DATABASE=
     unset -f DB_SEEDER_CUBRID_PASSWORD=
     unset -f DB_SEEDER_CUBRID_USER=
+    unset -f DB_SEEDER_CUBRID_USER_SYS=
+    export DB_SEEDER_CUBRID_VERSION=10.2
 fi
-if [ "$DB_SEEDER_DBMS" = "derby" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "derby" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_DERBY_CONNECTION_HOST=
     unset -f DB_SEEDER_DERBY_CONNECTION_PORT=
     unset -f DB_SEEDER_DERBY_CONNETION_PREFIX=
-    unset -f DB_SEEDER_DERBY_DATABASE=
+    export DB_SEEDER_DERBY_DATABASE=./tmp/kxn_db
+    export DB_SEEDER_DERBY_VERSION=10.15.2.0
 fi
-if [ "$DB_SEEDER_DBMS" = "derby_emb" ]; then
-    export DB_SEEDER_DBMS_EMBEDDED=yes
+
+if [ "$DB_SEEDER_DBMS" = "derby_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     unset -f DB_SEEDER_DERBY_CONNETION_PREFIX=
-    unset -f DB_SEEDER_DERBY_DATABASE=
+    export DB_SEEDER_DERBY_DATABASE=./tmp/kxn_db
 fi
-if [ "$DB_SEEDER_DBMS" = "firebird" ]; then
+
+unset -f DB_SEEDER_ENCODING_ISO_8859_1=
+unset -f DB_SEEDER_ENCODING_UTF_8=
+
+export DB_SEEDER_FILE_CONFIGURATION_NAME=src/main/resources/db_seeder.properties
+
+unset -f DB_SEEDER_FILE_STATISTICS_DELIMITER=
+unset -f DB_SEEDER_FILE_STATISTICS_HEADER=
+unset -f DB_SEEDER_FILE_STATISTICS_NAME=
+
+if [ "$DB_SEEDER_DBMS" = "firebird" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_FIREBIRD_CONNECTION_HOST=
     unset -f DB_SEEDER_FIREBIRD_CONNECTION_PORT=
     unset -f DB_SEEDER_FIREBIRD_CONNETION_PREFIX=
     unset -f DB_SEEDER_FIREBIRD_CONNETION_SUFFIX=
@@ -95,41 +128,66 @@ if [ "$DB_SEEDER_DBMS" = "firebird" ]; then
     unset -f DB_SEEDER_FIREBIRD_PASSWORD_SYS=
     unset -f DB_SEEDER_FIREBIRD_USER=
     unset -f DB_SEEDER_FIREBIRD_USER_SYS=
+    export DB_SEEDER_FIREBIRD_VERSION=3.0.5
+    export DB_SEEDER_FIREBIRD_VERSION=3.0.6
 fi
-if [ "$DB_SEEDER_DBMS" = "h2" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "h2" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_H2_CONNECTION_HOST=
     unset -f DB_SEEDER_H2_CONNECTION_PORT=
     unset -f DB_SEEDER_H2_CONNETION_PREFIX=
-    unset -f DB_SEEDER_H2_DATABASE=
+    export DB_SEEDER_H2_DATABASE=./tmp/kxn_db
     unset -f DB_SEEDER_H2_PASSWORD=
     unset -f DB_SEEDER_H2_SCHEMA=
     unset -f DB_SEEDER_H2_USER=
+    export DB_SEEDER_H2_VERSION=1.4.200
 fi
-if [ "$DB_SEEDER_DBMS" = "h2_emb" ]; then
-    export DB_SEEDER_DBMS_EMBEDDED=yes
+
+if [ "$DB_SEEDER_DBMS" = "h2_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     unset -f DB_SEEDER_H2_CONNETION_PREFIX=
-    unset -f DB_SEEDER_H2_DATABASE=
+    export DB_SEEDER_H2_DATABASE=./tmp/kxn_db
     unset -f DB_SEEDER_H2_PASSWORD=
     unset -f DB_SEEDER_H2_SCHEMA=
     unset -f DB_SEEDER_H2_USER=
 fi
-if [ "$DB_SEEDER_DBMS" = "hsqldb_emb" ]; then
-    export DB_SEEDER_DBMS_EMBEDDED=yes
+
+if [ "$DB_SEEDER_DBMS" = "hsqldb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_HSQLDB_CONNECTION_HOST=
+    unset -f DB_SEEDER_HSQLDB_CONNECTION_PORT=
     unset -f DB_SEEDER_HSQLDB_CONNETION_PREFIX=
     unset -f DB_SEEDER_HSQLDB_CONNETION_SUFFIX=
-    unset -f DB_SEEDER_HSQLDB_DATABASE=
+    export DB_SEEDER_HSQLDB_DATABASE=./tmp/kxn_db
     unset -f DB_SEEDER_HSQLDB_PASSWORD=
     unset -f DB_SEEDER_HSQLDB_SCHEMA=
     unset -f DB_SEEDER_HSQLDB_USER=
+    unset -f DB_SEEDER_HSQLDB_USER_SYS=
+    export DB_SEEDER_HSQLDB_VERSION=2.5.1
 fi
-if [ "$DB_SEEDER_DBMS" = "ibmdb2" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "hsqldb_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_HSQLDB_CONNETION_PREFIX=
+    unset -f DB_SEEDER_HSQLDB_CONNETION_SUFFIX=
+    export DB_SEEDER_HSQLDB_DATABASE=./tmp/kxn_db
+    unset -f DB_SEEDER_HSQLDB_PASSWORD=
+    unset -f DB_SEEDER_HSQLDB_SCHEMA=
+    unset -f DB_SEEDER_HSQLDB_USER=
+    unset -f DB_SEEDER_HSQLDB_USER_SYS=
+fi
+
+if [ "$DB_SEEDER_DBMS" = "ibmdb2" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_IBMDB2_CONNECTION_HOST=
     unset -f DB_SEEDER_IBMDB2_CONNECTION_PORT=
     unset -f DB_SEEDER_IBMDB2_CONNETION_PREFIX=
     unset -f DB_SEEDER_IBMDB2_DATABASE=
     unset -f DB_SEEDER_IBMDB2_PASSWORD_SYS=
     unset -f DB_SEEDER_IBMDB2_SCHEMA=
     unset -f DB_SEEDER_IBMDB2_USER_SYS=
+    export DB_SEEDER_IBMDB2_VERSION=11.5.0.0a
+    export DB_SEEDER_IBMDB2_VERSION=11.5.4.0
 fi
-if [ "$DB_SEEDER_DBMS" = "informix" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "informix" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_INFORMIX_CONNECTION_HOST=
     unset -f DB_SEEDER_INFORMIX_CONNECTION_PORT=
     unset -f DB_SEEDER_INFORMIX_CONNETION_PREFIX=
     unset -f DB_SEEDER_INFORMIX_CONNETION_SUFFIX=
@@ -137,8 +195,11 @@ if [ "$DB_SEEDER_DBMS" = "informix" ]; then
     unset -f DB_SEEDER_INFORMIX_DATABASE_SYS=
     unset -f DB_SEEDER_INFORMIX_PASSWORD_SYS=
     unset -f DB_SEEDER_INFORMIX_USER_SYS=
+    export DB_SEEDER_INFORMIX_VERSION=14.10.FC3DE
 fi
-if [ "$DB_SEEDER_DBMS" = "mariadb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mariadb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_MARIADB_CONNECTION_HOST=
     unset -f DB_SEEDER_MARIADB_CONNECTION_PORT=
     unset -f DB_SEEDER_MARIADB_CONNETION_PREFIX=
     unset -f DB_SEEDER_MARIADB_DATABASE=
@@ -147,8 +208,19 @@ if [ "$DB_SEEDER_DBMS" = "mariadb" ]; then
     unset -f DB_SEEDER_MARIADB_PASSWORD_SYS=
     unset -f DB_SEEDER_MARIADB_USER=
     unset -f DB_SEEDER_MARIADB_USER_SYS=
+    export DB_SEEDER_MARIADB_VERSION=10.4.13
+    export DB_SEEDER_MARIADB_VERSION=10.5.3
+    export DB_SEEDER_MARIADB_VERSION=10.5.4
 fi
-if [ "$DB_SEEDER_DBMS" = "mimer" ]; then
+
+unset -f DB_SEEDER_MAX_ROW_CITY=
+unset -f DB_SEEDER_MAX_ROW_COMPANY=
+unset -f DB_SEEDER_MAX_ROW_COUNTRY=
+unset -f DB_SEEDER_MAX_ROW_COUNTRY_STATE=
+unset -f DB_SEEDER_MAX_ROW_TIMEZONE=
+
+if [ "$DB_SEEDER_DBMS" = "mimer" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_MIMER_CONNECTION_HOST=
     unset -f DB_SEEDER_MIMER_CONNECTION_PORT=
     unset -f DB_SEEDER_MIMER_CONNETION_PREFIX=
     unset -f DB_SEEDER_MIMER_DATABASE=
@@ -157,9 +229,12 @@ if [ "$DB_SEEDER_DBMS" = "mimer" ]; then
     unset -f DB_SEEDER_MIMER_PASSWORD_SYS=
     unset -f DB_SEEDER_MIMER_USER=
     unset -f DB_SEEDER_MIMER_USER_SYS=
+    export DB_SEEDER_MIMER_VERSION=v11.0.3c
 fi
-if [ "$DB_SEEDER_DBMS" = "mssqlserver" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mssqlserver" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     export DB_SEEDER_ENCODING_UTF_8=false
+    unset -f DB_SEEDER_MSSQLSERVER_CONNECTION_HOST=
     unset -f DB_SEEDER_MSSQLSERVER_CONNECTION_PORT=
     unset -f DB_SEEDER_MSSQLSERVER_CONNETION_PREFIX=
     unset -f DB_SEEDER_MSSQLSERVER_DATABASE=
@@ -169,8 +244,11 @@ if [ "$DB_SEEDER_DBMS" = "mssqlserver" ]; then
     unset -f DB_SEEDER_MSSQLSERVER_SCHEMA=
     unset -f DB_SEEDER_MSSQLSERVER_USER=
     unset -f DB_SEEDER_MSSQLSERVER_USER_SYS=
+    export DB_SEEDER_MSSQLSERVER_VERSION=2019-latest
 fi
-if [ "$DB_SEEDER_DBMS" = "mysql" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mysql" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_MYSQL_CONNECTION_HOST=
     unset -f DB_SEEDER_MYSQL_CONNECTION_PORT=
     unset -f DB_SEEDER_MYSQL_CONNETION_PREFIX=
     unset -f DB_SEEDER_MYSQL_CONNETION_SUFFIX=
@@ -180,8 +258,11 @@ if [ "$DB_SEEDER_DBMS" = "mysql" ]; then
     unset -f DB_SEEDER_MYSQL_PASSWORD_SYS=
     unset -f DB_SEEDER_MYSQL_USER=
     unset -f DB_SEEDER_MYSQL_USER_SYS=
+    export DB_SEEDER_MYSQL_VERSION=8.0.20
 fi
-if [ "$DB_SEEDER_DBMS" = "oracle" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "oracle" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_ORACLE_CONNECTION_HOST=
     unset -f DB_SEEDER_ORACLE_CONNECTION_PORT=
     unset -f DB_SEEDER_ORACLE_CONNETION_PREFIX=
     unset -f DB_SEEDER_ORACLE_CONNETION_SERVICE=
@@ -189,8 +270,13 @@ if [ "$DB_SEEDER_DBMS" = "oracle" ]; then
     unset -f DB_SEEDER_ORACLE_PASSWORD_SYS=
     unset -f DB_SEEDER_ORACLE_USER=
     unset -f DB_SEEDER_ORACLE_USER_SYS=
+    export DB_SEEDER_ORACLE_VERSION=db_12_2_ee
+    export DB_SEEDER_ORACLE_VERSION=db_18_3_ee
+    export DB_SEEDER_ORACLE_VERSION=db_19_3_ee
 fi
-if [ "$DB_SEEDER_DBMS" = "postgresql" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "postgresql" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    unset -f DB_SEEDER_POSTGRESQL_CONNECTION_HOST=
     unset -f DB_SEEDER_POSTGRESQL_CONNECTION_PORT=
     unset -f DB_SEEDER_POSTGRESQL_CONNETION_PREFIX=
     unset -f DB_SEEDER_POSTGRESQL_DATABASE=
@@ -199,11 +285,17 @@ if [ "$DB_SEEDER_DBMS" = "postgresql" ]; then
     unset -f DB_SEEDER_POSTGRESQL_PASSWORD_SYS=
     unset -f DB_SEEDER_POSTGRESQL_USER=
     unset -f DB_SEEDER_POSTGRESQL_USER_SYS=
+    export DB_SEEDER_POSTGRESQL_VERSION=12.3-alpine
 fi
-if [ "$DB_SEEDER_DBMS" = "sqlite" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "sqlite" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     unset -f DB_SEEDER_SQLITE_CONNETION_PREFIX=
-    unset -f DB_SEEDER_SQLITE_DATABASE=
+    export DB_SEEDER_SQLITE_DATABASE=./tmp/kxn_db
 fi
+
+# ------------------------------------------------------------------------------
+# End   Properties.
+# ------------------------------------------------------------------------------
 
 echo "================================================================================"
 echo "Start $0"
@@ -211,27 +303,28 @@ echo "--------------------------------------------------------------------------
 echo "DB Seeder - Creation of dummy data in an empty database schema / user."
 echo "--------------------------------------------------------------------------------"
 echo "DBMS                              : $DB_SEEDER_DBMS"
-echo "DBMS_EMBEDDED                     : $DB_SEEDER_DBMS_EMBEDDED"
-echo --------------------------------------------------------------------------------
-echo "FILE_CONFIGURATION_NAME           : $DB_SEEDER_FILE_CONFIGURATION_NAME"
+echo "NO_CREATE_RUNS                    : $DB_SEEDER_NO_CREATE_RUNS"
+echo "SETUP_DBMS                        : $DB_SEEDER_SETUP_DBMS"
 echo "JAVA_CLASSPATH                    : $DB_SEEDER_JAVA_CLASSPATH"
-echo "--------------------------------------------------------------------------------"
-echo "CONNECTION_HOST                   : $DB_SEEDER_JDBC_CONNECTION_HOST"
-echo "--------------------------------------------------------------------------------"
-echo "MAX_ROW_CITY                      : $DB_SEEDER_MAX_ROW_CITY"
-echo "MAX_ROW_COMPANY                   : $DB_SEEDER_MAX_ROW_COMPANY"
-echo "MAX_ROW_COUNTRY                   : $DB_SEEDER_MAX_ROW_COUNTRY"
-echo "MAX_ROW_COUNTRY_STATE             : $DB_SEEDER_MAX_ROW_COUNTRY_STATE"
-echo "MAX_ROW_TIMEZONE                  : $DB_SEEDER_MAX_ROW_TIMEZONE"
-echo "--------------------------------------------------------------------------------"
-if [ "$DB_SEEDER_DBMS" = "cratedb" ]; then
+echo --------------------------------------------------------------------------------
+
+# ------------------------------------------------------------------------------
+# Start Properties.
+# ------------------------------------------------------------------------------
+
+if [ "$DB_SEEDER_DBMS" = "cratedb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "CRATEDB_CONNECTION_HOST           : $DB_SEEDER_CRATEDB_CONNECTION_HOST"
     echo "CRATEDB_CONNECTION_PORT           : $DB_SEEDER_CRATEDB_CONNECTION_PORT"
     echo "CRATEDB_CONNECTION_PREFIX         : $DB_SEEDER_CRATEDB_CONNECTION_PREFIX"
     echo "CRATEDB_PASSWORD                  : $DB_SEEDER_CRATEDB_PASSWORD"
     echo "CRATEDB_USER                      : $DB_SEEDER_CRATEDB_USER"
     echo "CRATEDB_USER_SYS                  : $DB_SEEDER_CRATEDB_USER_SYS"
+    echo "CRATEDB_VERSION                   : $DB_SEEDER_CRATEDB_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "cubrid" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "cubrid" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "CUBRID_CONNECTION_HOST            : $DB_SEEDER_CUBRID_CONNECTION_HOST"
     echo "CUBRID_CONNECTION_PORT            : $DB_SEEDER_CUBRID_CONNECTION_PORT"
     echo "CUBRID_CONNECTION_PREFIX          : $DB_SEEDER_CUBRID_CONNECTION_PREFIX"
     echo "CUBRID_CONNECTION_SUFFIX          : $DB_SEEDER_CUBRID_CONNECTION_SUFFIX"
@@ -240,17 +333,39 @@ if [ "$DB_SEEDER_DBMS" = "cubrid" ]; then
     echo "CUBRID_PASSWORD_SYS               : $DB_SEEDER_CUBRID_PASSWORD_SYS"
     echo "CUBRID_USER                       : $DB_SEEDER_CUBRID_USER"
     echo "CUBRID_USER_SYS                   : $DB_SEEDER_CUBRID_USER_SYS"
+    echo "CUBRID_VERSION                    : $DB_SEEDER_CUBRID_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "derby" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "derby" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "DERBY_CONNECTION_HOST             : $DB_SEEDER_DERBY_CONNECTION_HOST"
     echo "DERBY_CONNECTION_PORT             : $DB_SEEDER_DERBY_CONNECTION_PORT"
     echo "DERBY_CONNECTION_PREFIX           : $DB_SEEDER_DERBY_CONNECTION_PREFIX"
     echo "DERBY_DATABASE                    : $DB_SEEDER_DERBY_DATABASE"
+    echo "DERBY_VERSION                     : $DB_SEEDER_DERBY_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "derby_emb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "derby_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     echo "DERBY_CONNECTION_PREFIX           : $DB_SEEDER_DERBY_CONNECTION_PREFIX"
     echo "DERBY_DATABASE                    : $DB_SEEDER_DERBY_DATABASE"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "firebird" ]; then
+
+echo "ENCODING_ISO_8859_1               : $DB_SEEDER_ENCODING_ISO_8859_1"
+echo "ENCODING_UTF_8                    : $DB_SEEDER_ENCODING_UTF_8"
+echo --------------------------------------------------------------------------------
+
+echo "FILE_CONFIGURATION_NAME           : $DB_SEEDER_FILE_CONFIGURATION_NAME"
+echo "--------------------------------------------------------------------------------"
+
+echo "FILE_STATISTICS_DELIMITER         : $DB_SEEDER_FILE_STATISTICS_DELIMITER"
+echo "FILE_STATISTICS_HEADER            : $DB_SEEDER_FILE_STATISTICS_HEADER"
+echo "FILE_STATISTICS_NAME              : $DB_SEEDER_FILE_STATISTICS_NAME"
+echo "--------------------------------------------------------------------------------"
+
+if [ "$DB_SEEDER_DBMS" = "firebird" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "FIREBIRD_CONNECTION_HOST          : $DB_SEEDER_FIREBIRD_CONNECTION_HOST"
     echo "FIREBIRD_CONNECTION_PORT          : $DB_SEEDER_FIREBIRD_CONNECTION_PORT"
     echo "FIREBIRD_CONNECTION_PREFIX        : $DB_SEEDER_FIREBIRD_CONNECTION_PREFIX"
     echo "FIREBIRD_CONNECTION_SUFFIX        : $DB_SEEDER_FIREBIRD_CONNECTION_SUFFIX"
@@ -259,24 +374,34 @@ if [ "$DB_SEEDER_DBMS" = "firebird" ]; then
     echo "FIREBIRD_PASSWORD_SYS             : $DB_SEEDER_FIREBIRD_PASSWORD_SYS"
     echo "FIREBIRD_USER                     : $DB_SEEDER_FIREBIRD_USER"
     echo "FIREBIRD_USER_SYS                 : $DB_SEEDER_FIREBIRD_USER_SYS"
+    echo "FIREBIRD_VERSION                  : $DB_SEEDER_FIREBIRD_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "h2" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "h2" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "H2_CONNECTION_HOST                : $DB_SEEDER_H2_CONNECTION_HOST"
     echo "H2_CONNECTION_PORT                : $DB_SEEDER_H2_CONNECTION_PORT"
     echo "H2_CONNECTION_PREFIX              : $DB_SEEDER_H2_CONNECTION_PREFIX"
     echo "H2_DATABASE                       : $DB_SEEDER_H2_DATABASE"
     echo "H2_PASSWORD                       : $DB_SEEDER_H2_PASSWORD"
     echo "H2_SCHEMA                         : $DB_SEEDER_H2_SCHEMA"
     echo "H2_USER                           : $DB_SEEDER_H2_USER"
+    echo "H2_VERSION                        : $DB_SEEDER_H2_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "h2_emb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "h2_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     echo "H2_CONNECTION_PREFIX              : $DB_SEEDER_H2_CONNECTION_PREFIX"
-    echo "H2_CONNECTION_SUFFIX              : $DB_SEEDER_H2_CONNECTION_SUFFIX"
     echo "H2_DATABASE                       : $DB_SEEDER_H2_DATABASE"
     echo "H2_PASSWORD                       : $DB_SEEDER_H2_PASSWORD"
     echo "H2_SCHEMA                         : $DB_SEEDER_H2_SCHEMA"
     echo "H2_USER                           : $DB_SEEDER_H2_USER"
+    echo "H2_VERSION                        : $DB_SEEDER_H2_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "hsqldb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "hsqldb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "HSQLDB_CONNECTION_HOST            : $DB_SEEDER_HSQLDB_CONNECTION_HOST"
     echo "HSQLDB_CONNECTION_PORT            : $DB_SEEDER_HSQLDB_CONNECTION_PORT"
     echo "HSQLDB_CONNECTION_PREFIX          : $DB_SEEDER_HSQLDB_CONNECTION_PREFIX"
     echo "HSQLDB_CONNECTION_SUFFIX          : $DB_SEEDER_HSQLDB_CONNECTION_SUFFIX"
@@ -285,8 +410,11 @@ if [ "$DB_SEEDER_DBMS" = "hsqldb" ]; then
     echo "HSQLDB_SCHEMA                     : $DB_SEEDER_HSQLDB_SCHEMA"
     echo "HSQLDB_USER                       : $DB_SEEDER_HSQLDB_USER"
     echo "HSQLDB_USER_SYS                   : $DB_SEEDER_HSQLDB_USER_SYS"
+    echo "HSQLDB_VERSION                    : $DB_SEEDER_HSQLDB_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "hsqldb_emb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "hsqldb_emb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
     echo "HSQLDB_CONNECTION_PREFIX          : $DB_SEEDER_HSQLDB_CONNECTION_PREFIX"
     echo "HSQLDB_CONNECTION_SUFFIX          : $DB_SEEDER_HSQLDB_CONNECTION_SUFFIX"
     echo "HSQLDB_DATABASE                   : $DB_SEEDER_HSQLDB_DATABASE"
@@ -294,16 +422,24 @@ if [ "$DB_SEEDER_DBMS" = "hsqldb_emb" ]; then
     echo "HSQLDB_SCHEMA                     : $DB_SEEDER_HSQLDB_SCHEMA"
     echo "HSQLDB_USER_SYS                   : $DB_SEEDER_HSQLDB_USER_SYS"
     echo "HSQLDB_USER                       : $DB_SEEDER_HSQLDB_USER"
+    echo "HSQLDB_VERSION                    : $DB_SEEDER_HSQLDB_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "ibmdb2" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "ibmdb2" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "IBMDB2_CONNECTION_HOST            : $DB_SEEDER_IBMDB2_CONNECTION_HOST"
     echo "IBMDB2_CONNECTION_PORT            : $DB_SEEDER_IBMDB2_CONNECTION_PORT"
     echo "IBMDB2_CONNECTION_PREFIX          : $DB_SEEDER_IBMDB2_CONNECTION_PREFIX"
     echo "IBMDB2_DATABASE                   : $DB_SEEDER_IBMDB2_DATABASE"
     echo "IBMDB2_PASSWORD_SYS               : $DB_SEEDER_IBMDB2_PASSWORD_SYS"
     echo "IBMDB2_SCHEMA                     : $DB_SEEDER_IBMDB2_SCHEMA"
     echo "IBMDB2_USER_SYS                   : $DB_SEEDER_IBMDB2_USER_SYS"
+    echo "IBMDB2_VERSION                    : $DB_SEEDER_IBMDB2_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "informix" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "informix" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "INFORMIX_CONNECTION_HOST          : $DB_SEEDER_INFORMIX_CONNECTION_HOST"
     echo "INFORMIX_CONNECTION_PORT          : $DB_SEEDER_INFORMIX_CONNECTION_PORT"
     echo "INFORMIX_CONNECTION_PREFIX        : $DB_SEEDER_INFORMIX_CONNECTION_PREFIX"
     echo "INFORMIX_CONNECTION_SUFFIX        : $DB_SEEDER_INFORMIX_CONNECTION_SUFFIX"
@@ -311,8 +447,12 @@ if [ "$DB_SEEDER_DBMS" = "informix" ]; then
     echo "INFORMIX_DATABASE_SYS             : $DB_SEEDER_INFORMIX_DATABASE.SYS"
     echo "INFORMIX_PASSWORD_SYS             : $DB_SEEDER_INFORMIX_PASSWORD.SYS"
     echo "INFORMIX_USER_SYS                 : $DB_SEEDER_INFORMIX_USER.SYS"
+    echo "INFORMIX_VERSION                  : $DB_SEEDER_INFORMIX_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "mariadb" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mariadb" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "MARIADB_CONNECTION_HOST           : $DB_SEEDER_MARIADB_CONNECTION_HOST"
     echo "MARIADB_CONNECTION_PORT           : $DB_SEEDER_MARIADB_CONNECTION_PORT"
     echo "MARIADB_CONNECTION_PREFIX         : $DB_SEEDER_MARIADB_CONNECTION_PREFIX"
     echo "MARIADB_DATABASE                  : $DB_SEEDER_MARIADB_DATABASE"
@@ -321,8 +461,19 @@ if [ "$DB_SEEDER_DBMS" = "mariadb" ]; then
     echo "MARIADB_PASSWORD_SYS              : $DB_SEEDER_MARIADB_PASSWORD_SYS"
     echo "MARIADB_USER                      : $DB_SEEDER_MARIADB_USER"
     echo "MARIADB_USER_SYS                  : $DB_SEEDER_MARIADB_USER_SYS"
+    echo "MARIADB_VERSION                   : $DB_SEEDER_MARIADB_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "mimer" ]; then
+
+echo "MAX_ROW_CITY                      : $DB_SEEDER_MAX_ROW_CITY"
+echo "MAX_ROW_COMPANY                   : $DB_SEEDER_MAX_ROW_COMPANY"
+echo "MAX_ROW_COUNTRY                   : $DB_SEEDER_MAX_ROW_COUNTRY"
+echo "MAX_ROW_COUNTRY_STATE             : $DB_SEEDER_MAX_ROW_COUNTRY_STATE"
+echo "MAX_ROW_TIMEZONE                  : $DB_SEEDER_MAX_ROW_TIMEZONE"
+echo "--------------------------------------------------------------------------------"
+
+if [ "$DB_SEEDER_DBMS" = "mimer" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "MIMER_CONNECTION_HOST             : $DB_SEEDER_MIMER_CONNECTION_HOST"
     echo "MIMER_CONNECTION_PORT             : $DB_SEEDER_MIMER_CONNECTION_PORT"
     echo "MIMER_CONNECTION_PREFIX           : $DB_SEEDER_MIMER_CONNECTION_PREFIX"
     echo "MIMER_DATABASE                    : $DB_SEEDER_MIMER_DATABASE"
@@ -331,8 +482,12 @@ if [ "$DB_SEEDER_DBMS" = "mimer" ]; then
     echo "MIMER_PASSWORD_SYS                : $DB_SEEDER_MIMER_PASSWORD_SYS"
     echo "MIMER_USER                        : $DB_SEEDER_MIMER_USER"
     echo "MIMER_USER_SYS                    : $DB_SEEDER_MIMER_USER_SYS"
+    echo "MIMER_VERSION                     : $DB_SEEDER_MIMER_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "mssqlserver" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mssqlserver" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "MSSQLSERVER_CONNECTION_HOST       : $DB_SEEDER_MSSQLSERVER_CONNECTION_HOST"
     echo "MSSQLSERVER_CONNECTION_PORT       : $DB_SEEDER_MSSQLSERVER_CONNECTION_PORT"
     echo "MSSQLSERVER_CONNECTION_PREFIX     : $DB_SEEDER_MSSQLSERVER_CONNECTION_PREFIX"
     echo "MSSQLSERVER_DATABASE              : $DB_SEEDER_MSSQLSERVER_DATABASE"
@@ -342,8 +497,12 @@ if [ "$DB_SEEDER_DBMS" = "mssqlserver" ]; then
     echo "MSSQLSERVER_SCHEMA                : $DB_SEEDER_MSSQLSERVER_SCHEMA"
     echo "MSSQLSERVER_USER                  : $DB_SEEDER_MSSQLSERVER_USER"
     echo "MSSQLSERVER_USER_SYS              : $DB_SEEDER_MSSQLSERVER_USER_SYS"
+    echo "MSSQLSERVER_VERSION               : $DB_SEEDER_MSSQLSERVER_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "mysql" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "mysql" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "MYSQL_CONNECTION_HOST             : $DB_SEEDER_MYSQL_CONNECTION_HOST"
     echo "MYSQL_CONNECTION_PORT             : $DB_SEEDER_MYSQL_CONNECTION_PORT"
     echo "MYSQL_CONNECTION_PREFIX           : $DB_SEEDER_MYSQL_CONNECTION_PREFIX"
     echo "MYSQL_CONNECTION_SUFFIX           : $DB_SEEDER_MYSQL_CONNECTION_SUFFIX"
@@ -353,8 +512,12 @@ if [ "$DB_SEEDER_DBMS" = "mysql" ]; then
     echo "MYSQL_PASSWORD_SYS                : $DB_SEEDER_MYSQL_PASSWORD_SYS"
     echo "MYSQL_USER                        : $DB_SEEDER_MYSQL_USER"
     echo "MYSQL_USER_SYS                    : $DB_SEEDER_MYSQL_USER_SYS"
+    echo "MYSQL_VERSION                     : $DB_SEEDER_MYSQL_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "oracle" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "oracle" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "ORACLE_CONNECTION_HOST            : $DB_SEEDER_ORACLE_CONNECTION_HOST"
     echo "ORACLE_CONNECTION_PORT            : $DB_SEEDER_ORACLE_CONNECTION_PORT"
     echo "ORACLE_CONNECTION_PREFIX          : $DB_SEEDER_ORACLE_CONNECTION_PREFIX"
     echo "ORACLE_CONNECTION_SERVICE         : $DB_SEEDER_ORACLE_CONNECTION_SSERVICE"
@@ -362,8 +525,12 @@ if [ "$DB_SEEDER_DBMS" = "oracle" ]; then
     echo "ORACLE_PASSWORD_SYS               : $DB_SEEDER_ORACLE_PASSWORD_SYS"
     echo "ORACLE_USER                       : $DB_SEEDER_ORACLE_USER"
     echo "ORACLE_USER_SYS                   : $DB_SEEDER_ORACLE_USER_SYS"
+    echo "ORACLE_VERSION                    : $DB_SEEDER_ORACLE_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
-if [ "$DB_SEEDER_DBMS" = "postgresql" ]; then
+
+if [ "$DB_SEEDER_DBMS" = "postgresql" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "POSTGRESQL_CONNECTION_HOST        : $DB_SEEDER_POSTGRESQL_CONNECTION_HOST"
     echo "POSTGRESQL_CONNECTION_PORT        : $DB_SEEDER_POSTGRESQL_CONNECTION_PORT"
     echo "POSTGRESQL_CONNECTION_PREFIX      : $DB_SEEDER_POSTGRESQL_CONNECTION_PREFIX"
     echo "POSTGRESQL_DATABASE               : $DB_SEEDER_POSTGRESQL_DATABASE"
@@ -372,23 +539,28 @@ if [ "$DB_SEEDER_DBMS" = "postgresql" ]; then
     echo "POSTGRESQL_PASSWORD_SYS           : $DB_SEEDER_POSTGRESQL_PASSWORD_SYS"
     echo "POSTGRESQL_USER                   : $DB_SEEDER_POSTGRESQL_USER"
     echo "POSTGRESQL_USER_SYS               : $DB_SEEDER_POSTGRESQL_USER_SYS"
-fi
-if [ "$DB_SEEDER_DBMS" = "sqlite" ]; then
-    echo "SQLITE_CONNECTION_PREFIX          : $DB_SEEDER_SQLITE_CONNECTION_PREFIX"
-    echo "SQLITE_DATABASE                   : $DB_SEEDER_SQLITE_DATABASE"
+    echo "POSTGRESQL_VERSION                : $DB_SEEDER_POSTGRESQL_VERSION"
+    echo "--------------------------------------------------------------------------------"
 fi
 
-echo "--------------------------------------------------------------------------------"
-echo "FILE_STATISTICS_DELIMITER         : $DB_SEEDER_FILE_STATISTICS_DELIMITER"
-echo "FILE_STATISTICS_HEADER            : $DB_SEEDER_FILE_STATISTICS_HEADER"
-echo "FILE_STATISTICS_NAME              : $DB_SEEDER_FILE_STATISTICS_NAME"
-echo "--------------------------------------------------------------------------------"
+if [ "$DB_SEEDER_DBMS" = "sqlite" ] || [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    echo "SQLITE_CONNECTION_PREFIX          : $DB_SEEDER_SQLITE_CONNECTION_PREFIX"
+    echo "SQLITE_DATABASE                   : $DB_SEEDER_SQLITE_DATABASE"
+    echo "--------------------------------------------------------------------------------"
+fi
+
+# ------------------------------------------------------------------------------
+# End   Properties.
+# ------------------------------------------------------------------------------
+
 date +"DATE TIME : %d.%m.%Y %H:%M:%S"
 echo "================================================================================"
 
-rm -f db_seeder.log
-
-java --enable-preview -cp $DB_SEEDER_JAVA_CLASSPATH ch.konnexions.db_seeder.DatabaseSeeder $DB_SEEDER_DBMS
+if [ "$DB_SEEDER_DBMS" = "complete" ]; then
+    ( ./scripts/run_db_seeder_complete.sh )
+else
+    ( ./scripts/run_db_seeder_single.sh $DB_SEEDER_DBMS )
+fi  
 
 echo "--------------------------------------------------------------------------------"
 date +"DATE TIME : %d.%m.%Y %H:%M:%S"
